[coqdep] Option `-w` to adjust warnings.
Co-Authored-By: Rodolphe Lepigre <rodolphe@bedrocksystems.com>

--- a/man/coqdep.1
+++ b/man/coqdep.1
@@ -82,8 +82,12 @@ Includes dependencies about .vos files.
 .TP
 .B \-dyndep (opt|byte|both|no|var)
 Set how dependencies over ML modules are printed.
+.TP
 .B \-m META
 Resolve plugin names using the META file.
+.TP
+.B \-w w1,...,wn
+Configure display of warnings as for coqc.
 
 .SH EXIT STATUS
 .IP "1"
