This commit includes a proposal for extending the OCaml part of the extraction plugin. The new functionality includes: 1) Adding the command Extract Foreign Constant which marks a qualid as external. During extraction, instead of generating    `val qualid : type` in mli and `let qualid = mlname` in the ml file, only the expression `external qualid : type = "external_fun_name"` is generated in the ml file. This way, the OCaml compiler knows that the function will be resolved by the C compiler/linker 2) Adding the command Extract Callback qualid which marks a qualid as external. During extraction, additionally to the synthesised function, an OCaml callback registraction function call is synthesised which exposes the function in order to be able to call it from C as closure. 3) Print and Reset commands to show and reset the currently defined externals and callbacks 4) Adoptions to CoqIDE in order to highlight the new commands 5) Adoptions to the Extraction Plugin documentation with the new section "Generating FFI Code" that describes the functionality in more detail. 6) Tests in the test suite
With contributions by jfehrle, SkySkimmer and silene

--- a/ide/coqide/coq.lang
+++ b/ide/coqide/coq.lang
@@ -181,7 +181,8 @@
         <context id="toplevel-command" style-ref="vernac-keyword">
           <keyword>Add</keyword>
           <keyword>Load</keyword>
-          <keyword>(Print|Reset)\%{space}+Extraction\%{space}+(Inline|Blacklist)</keyword>
+          <keyword>(Print|Reset)\%{space}+Extraction\%{space}+(Inline|Blacklist|Callback)</keyword>
+          <keyword>Print\%{space}+Extraction\%{space}+Foreign</keyword>
           <keyword>Comments</keyword>
           <keyword>Solve\%{space}Obligation</keyword>
           <keyword>(Uns|S)et(\%{space}\%{ident})+</keyword>
@@ -222,6 +223,7 @@
           <keyword>Implicit\%{space}Arguments</keyword>
           <keyword>Include</keyword>
           <keyword>Extract\%{space}((Inlined\%{space})?Constant|Inductive)</keyword>
+          <keyword>Extract\%{space}Foreign\%{space}Constant</keyword>
           <include>
             <context sub-pattern="1" style-ref="vernac-keyword"/>
             <context sub-pattern="qua" style-ref="identifier"/>
@@ -235,6 +237,7 @@
           <keyword>Import</keyword>
           <keyword>Export</keyword>
           <keyword>((Recursive|Separate)\%{space})?Extraction(\%{space}(Library|(No)?Inline|Blacklist))?</keyword>
+          <keyword>Extract\%{space}Callback</keyword>
           <include>
             <context sub-pattern="1" style-ref="vernac-keyword"/>
             <context sub-pattern="qua_list" style-ref="identifier"/>
