Fix the man pages' formatting.
I'm thinking about learning myself a little Coq, but there's a glaring
rock in the way: The man pages are badly formatted.  Can't possibly
attempt to learn as long as they stay that way.

The main changes are these:

Empty lines emit vertical space; replace by stylistic no-ops or actual
paragraph separators.

Wherever there should be a hyphen-minus in the output, use \- in the
input.

Tell troff where a sentence ends by following it by a newline.

Ellipses look nicer with a little space between the dots; do that.

The description in the NAME section shouldn't be capitalized and should
be nicely readable.

Let the man page titles be what the man pages are about.

Don't use font-alternating macros where simple font-changing macros
suffice.

There's more that I'd change if I were in control of the man pages, but
that's less important.  If you want more rationale for the things I did
do, ask me.  I'm happy to talk about troff.

--- a/man/coq_makefile.1
+++ b/man/coq_makefile.1
@@ -1,33 +1,35 @@
-.TH COQ 1
-
+.\" TODO: actually document this thing
+.TH COQ_MAKEFILE 1
+.
 .SH NAME
-coq_makefile \- The Coq Proof Assistant makefile generator
-
-
+coq_makefile \- generate makefiles for Coq proof development
+.
+.
 .SH SYNOPSIS
 .B coq_makefile
 [
-.B arguments
+.I arguments
 ]
-
+.
 .SH DESCRIPTION
-
+.
 .B coq_makefile
 is a makefile generator for Coq proof developments.
-
+.
 .SH OPTIONS
-
+.
 .TP
-.BI \-h
-Will give you a description of the whole list of options of coq_makefile.
-
+.B \-h
+Will give you a description of the whole list of options of
+.BR coq_makefile .
+.
 .SH SEE ALSO
-
+.
 .BR coqtop (1),
 .BR coqtc (1),
-.BR coqdep (1).
-.br
+.BR coqdep (1)
+.PP
 .I
 The Coq Reference Manual.
-.I
+.PP
 The Coq web site: http://coq.inria.fr
