--- a/man/coqtop.byte.1
+++ b/man/coqtop.byte.1
@@ -1,33 +1,33 @@
-.TH COQ 1
-
+.TH COQTOP.BYTE 1
+.
 .SH NAME
-coqtop.byte \- The bytecode Coq toplevel
-
-
+coqtop.byte \- bytecode toplevel Coq system
+.
+.
 .SH SYNOPSIS
 .B coqtop.byte
 [
-.B options
+options
 ]
 [
 .I file
 ]
-
+.
 .SH DESCRIPTION
-
+.
 .B coqopt.byte
-is the bytecode version of Coq. It should not be called directly, but
-only by
+is the bytecode version of Coq.
+It should not be called directly, but only by
 .B coqtop
 and
-.B coqc
-
+.BR coqc .
+.
 .SH SEE ALSO
-
+.
 .BR coqtop (1),
-.BR coqc (1).
-.br
+.BR coqc (1)
+.PP
 .I
 The Coq Reference Manual.
-.I
+.PP
 The Coq web site: http://coq.inria.fr
