--- a/man/coqchk.1
+++ b/man/coqchk.1
@@ -1,101 +1,109 @@
-.TH COQ 1
-
+.TH COQCHK 1
+.
 .SH NAME
-coqchk \- The Coq Proof Checker compiled libraries verifier
-
-
+coqchk \- verify compiled Coq libraries
+.
+.
 .SH SYNOPSIS
 .B coqchk
 [
-.B options
+options
 ]
 .I modules
-
-
+.
+.
 .SH DESCRIPTION
-
+.
 .B coqchk
 is the standalone checker of compiled libraries (.vo files produced by
-coqc) for the Coq Proof Assistant. See the Reference Manual for more
-information. It returns with exit code 0 if all the requested tasks
-succeeded. A non-zero return code means that something went wrong: some
+.BR coqc )
+for the Coq Proof Assistant.
+See the
+.I Reference Manual
+for more information.
+It returns with exit code 0 if all the requested tasks succeeded.
+A non-zero return code means that something went wrong: some
 library was not found, corrupted content, type-checking failure, etc.
-
-.IR modules \&
-is a list of modules to be checked. Modules can be referred to by a
-short or qualified logical name, or by their filename.
-
+.PP
+.I modules
+is a list of modules to be checked.
+Modules can be referred to by a short or qualified logical name,
+or by their filename.
+.
 .SH OPTIONS
-
+.
 .TP
 .BI \-I \ dir, \ \-\-include \ dir
-add directory
+Add directory
 .I dir
-in the include path
-
+to the include path.
+.
 .TP
 .BI \-Q \ dir\ coqdir
-map physical
+Map physical
 .I dir
 to logical
-.I coqdir
-
+.I coqdir.
+.
 .TP
 .BI \-R \ dir\ coqdir
-synonymous for -Q
-
+Synonymous to
+.BR \-Q .
+.
 .TP
-.BI \-silent
-makes coqchk less verbose.
-
+.B \-silent
+Be less verbose.
+.
 .TP
 .BI \-admit \ module
-tag the specified module and all its dependencies as trusted, and will
+Tag the specified module and all its dependencies as trusted, and will
 not be rechecked, unless explicitly requested by other options.
-
+.
 .TP
 .BI \-norec \ module
-specifies that the given module shall be verified without requesting
+Specifies that the given module shall be verified without requesting
 to check its dependencies.
-
+.
 .TP
-.BI \-m,\ \-\-memory
-displays a summary of the memory used by the checker.
-
+.BR \-m ,\  \-\-memory
+Displays a summary of the memory used by the checker.
+.
 .TP
-.BI \-o,\ \-\-output\-context
-displays a summary of the logical content that have been
+.BR \-o ,\  \-\-output\-context
+Displays a summary of the logical content that have been
 verified: assumptions and usage of impredicativity.
-
+.
 .TP
-.BI \-impredicative\-set
-allows the checker to accept libraries that have been compiled with
+.B \-impredicative\-set
+Allows the checker to accept libraries that have been compiled with
 this flag.
-
+.
 .TP
-.BI \-v
-print coqchk version and exit.
-
+.B \-v
+Print
+.B coqchk
+version and exit.
+.
 .TP
 .BI \-coqlib \ dir
-overrides the default location of the standard library.
-
+Overrides the default location of the standard library.
+.
 .TP
-.BI \-where
-print coqchk standard library location and exit.
-
+.B \-where
+Print coqchk standard library location and exit.
+.
 .TP
-.BI \-h,\ \-\-help
-print list of options
-
+.BR \-h ,\  \-\-help
+Print list of options.
+.
 .SH SEE ALSO
-
+.
 .BR coqtop (1),
 .BR coqc (1),
 .BR coq_makefile (1),
-.BR coqdep (1).
-.br
+.BR coqdep (1)
+.PP
 .I
 The Coq Reference Manual.
-.I
+.PP
 The Coq web site: http://coq.inria.fr
